added realm selection
